Patch whatsapp-web.js to use puppeteer-core for Termux

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "patch-package"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "puppeteer-core": "^24.9.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.28.0"
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0"
   }
 }
